--- a/lab1/zxl_report.Rmd
+++ b/lab1/zxl_report.Rmd
@@ -105,13 +105,23 @@ n = length(y)
 mu = 3.7
 tausq = sum((log_y - mu)^2)/n
 
-sigmas = rinvchisq(n=10000, nu=n, tau = tausq)
-plot(x=1:10000, y=sigmas, main="Comparing Simulated Values and Real Value", xlab="Trial", ylab="Simulated Sigma-Squared")
-theoretical_val=n*tausq/(n-2)
-abline(h=theoretical_val, col="red", lwd = 2)
-legend("topright", legend = "Theoretical Sigma-Squared", col="red", lty=1, lwd=2)
-df=data.frame(Simulation_Mean=mean(sigmas), Theoretical_Sigmasq = theoretical_val, Difference_in_Percentage = abs(mean(sigmas)-theoretical_val)*100/theoretical_val)
-print(df)
+# simulating sigmasq from posterior
+X=rchisq(10000,n-1)
+simu_sigmas_sq=(n-1)*tausq/X
+#hist(simu_sigmas,breaks=100,main = "Histogram of simulated sigma square from posterior")
+
+# theoretical
+sigmas_sq=dinvchisq(seq(0,3,0.001),nu=n,tau=tausq)
+#plot(sigmas_sq,main = "Density of theoretical function")
+d=density(simu_sigmas_sq)
+ggplot()+geom_col(aes(x=d$x,y=d$y,colour="Simulation"))+geom_line(aes(x=seq(0,3,0.001),y=sigmas_sq,colour="Theoretical"))+xlab("X")
+
+# plot(x=1:10000, y=sigmas, main="Comparing Simulated Values and Real Value", xlab="Trial", ylab="Simulated Sigma-Squared")
+# theoretical_val=n*tausq/(n-2)
+# abline(h=theoretical_val, col="red", lwd = 2)
+# legend("topright", legend = "Theoretical Sigma-Squared", col="red", lty=1, lwd=2)
+# df=data.frame(Simulation_Mean=mean(sigmas), Theoretical_Sigmasq = theoretical_val, Difference_in_Percentage = abs(mean(sigmas)-theoretical_val)*100/theoretical_val)
+# print(df)
 ```
 
  Difference between mean of simulated sigma-squared values and theoretical value of sigma-squared in percentage is less than 1%. 
@@ -119,8 +129,9 @@ print(df)
 (b) The most common measure of income inequality is the Gini coefficient, G, where $0\leqslant G\leqslant1$. $G=0$ means a completely equal income distribution, whereas $G=1$ means complete income inequality. See Wikipedia for more information. It can be shown that $G=2\Phi(\sigma/\sqrt{2})-1$ when incomes follow a $\log N(\mu,\sigma^2)$distribution.$\Phi(z)$is the cumulative distribution function (CDF) for the standard normal distribution with mean zero and unit variance. Use the posterior draws in a) to compute the posterior distribution of the Gini coefficient G for the current data set.
 
 ```{r,q2=TRUE,echo=FALSE,message=FALSE, fig.align='center'}
-g_coeffs = 2*pnorm(sigmas/sqrt(2)) -1
-hist(g_coeffs, main="Histogram of Gini Coefficients from Simulation", xlab="Simulated Gini-coefficients")
+g_coeffs = 2*pnorm(sqrt(simu_sigmas_sq)/sqrt(2)) -1
+#hist(g_coeffs, main="Histogram of Gini Coefficients from Simulation", xlab="Simulated Gini-coefficients",breaks=100)
+ggplot()+geom_density(aes(g_coeffs))
 ```
 
  By generating 10000 draws and plotting the result, we can observe that the simulated Gini-coefficients are right-skewed, which indicates this sample represents income inequality.
@@ -128,24 +139,30 @@ hist(g_coeffs, main="Histogram of Gini Coefficients from Simulation", xlab="Simu
 (c) Use the posterior draws from b) to compute a 90% equal tail credible interval for G. A 90% equal tail interval (a; b) cuts off 5% percent of the posterior probability mass to the left of a, and 5% to the right of b. Also, do a kernel density estimate of the posterior of G using the density function in R with default settings, and use that kernel density estimate to compute a 90% Highest Posterior Density interval for G. Compare the two intervals.
 
 ```{r,q2=TRUE,echo=FALSE,message=FALSE, fig.align='center'}
-g_coeffs_sorted = sort(g_coeffs)
-a = g_coeffs_sorted[10000*0.05]
-b = g_coeffs_sorted[10000*0.95]
+d=density(g_coeffs)
+
+ETI_x=d$x
+ETI_y=d$y
+ETI_unsorted=cumsum(ETI_y)/sum(ETI_y)
+
+lower <- which(ETI_unsorted>=0.05)[1]
+upper <- which(ETI_unsorted>=0.95)[1]
 cat("90% equal tail credible interval is:", "\n")
-c(a,b)
+ETI=d$x[c(lower,upper)]
+cat(ETI)
 
-# HPD
-d=density(g_coeffs_sorted)
-sim_dens=cumsum(d$y)/sum(d$y)
-lower <- which(sim_dens>=0.05)[1]
-upper <- which(sim_dens>=0.95)[1]
+df=data.frame(x=d$x,y=d$y,idx=c(1:length(d$x)))
+df=df[order(df$y,decreasing = TRUE),]
+HPD_sorted=cumsum(df$y)/sum(df$y)
+df$HPD_sorted=HPD_sorted
+inx=df$idx[df$HPD_sorted<0.9]
+lower=min(inx)
+upper=max(inx)
 cat("90% Highest Posterior Density interval is:", "\n")
-HPD=d$x[c(lower,upper)]
-print(HPD)
+HPD=c(d$x[lower],d$x[upper])
+cat(HPD)
 
-ggplot()+geom_density(aes(x=g_coeffs))+geom_vline(aes(xintercept =a,colour="ETI"),size=0.5)+geom_vline(aes(xintercept = b,colour="ETI"),size=0.5)+geom_vline(aes(xintercept =HPD[1],colour="HDI"),size=0.5)+geom_vline(aes(xintercept = HPD[2],colour="HDI"),size=0.5)
-
-
+ggplot()+geom_density(aes(x=g_coeffs))+geom_vline(aes(xintercept =ETI[1],colour="ETI"),size=0.5)+geom_vline(aes(xintercept = ETI[2],colour="ETI"),size=0.5)+geom_vline(aes(xintercept =HPD[1],colour="HDI"),size=0.5)+geom_vline(aes(xintercept = HPD[2],colour="HDI"),size=0.5)
 ```
 
  We can find that in this case, HPD has a wider interval comparing to ETI.
